Fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-#root {
-  @apply bg-neutral-gray-100 font-nunito dark:bg-neutral-dark-blue-700;
-}
-
 .country-card {
-  @apply flex max-w-max cursor-pointer flex-col gap-y-8 overflow-hidden rounded bg-white text-sm shadow-md hover:bg-neutral-100 dark:bg-neutral-dark-blue-500 dark:hover:bg-opacity-80;
+  @apply flex max-w-max cursor-pointer flex-col gap-y-8 overflow-hidden rounded bg-white text-sm shadow-md hover:bg-neutral-100 dark:bg-neutral-dark-blue-500 dark:hover:bg-opacity-70;
 }
